[package]
name = "recomp"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Reusable components"
repository = "https://github.com/smirzaei/recomp"
readme = "README.md"

[package.metadata.docs.rs]
features = ["postgres"]

[features]
default = []
postgres = ["dep:sqlx", "dep:thiserror"]
testcontainers = ["postgres", "dep:testcontainers-modules", "dep:url"]

[dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots"], optional = true }
testcontainers-modules = { version = "0.15.0", features = ["postgres", "ssl"], optional = true }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "time"] }
tokio-util = "0.7.18"
url = { version = "2.5.8", optional = true }

[dev-dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time"] }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

as_conversions = "deny"
assertions_on_result_states = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
fn_to_numeric_cast_any = "deny"
cfg_not_test = "deny"
create_dir = "deny"
dbg_macro = "deny"
default_union_representation = "deny"
disallowed_script_idents = "deny"
doc_include_without_cfg = "deny"
doc_paragraphs_missing_punctuation = "deny"
unnecessary_safety_doc = "deny"
mem_forget = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
lossy_float_literal = "deny"
float_cmp_const = "deny"
pointer_format = "deny"
renamed_function_params = "deny"
if_then_some_else_none = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
infinite_loop = "deny"
rest_pat_in_fully_bound_structs = "deny"
try_err = "deny"
wildcard_enum_match_arm = "deny"
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
map_with_unused_argument_over_ranges = "deny"
return_and_then = "deny"
string_lit_chars_any = "deny"
verbose_file_reads = "deny"
min_ident_chars = "deny"
separated_literal_suffix = "deny"
unneeded_field_pattern = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
mixed_read_write_in_expression = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "allow"
arithmetic_side_effects = "deny"
alloc_instead_of_core = "deny"
expect_used = "deny"
from_over_into = "deny"
indexing_slicing = "deny"
panic_in_result_fn = "deny"
items_after_test_module = "deny"
mod_module_files = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
non_zero_suggestions = "deny"
pathbuf_init_then_push = "deny"
precedence_bits = "deny"
needless_raw_strings = "deny"
redundant_type_annotations = "deny"
unnecessary_self_imports = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
redundant_test_prefix = "deny"
deref_by_slicing = "deny"
same_name_method = "deny"
semicolon_inside_block = "deny"
semicolon_outside_block = "deny"
non_ascii_literal = "deny"
string_add = "deny"
str_to_string = "deny"
map_err_ignore = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"
unwrap_in_result = "deny"
use_debug = "deny"
print_stdout = "deny"
print_stderr = "deny"
pub_use = "allow"
pub_without_shorthand = "deny"
redundant_pub_crate = "deny"
string_slice = "deny"
unnecessary_fallible_conversions = "deny"
unwrap_used = "deny"

missing_errors_doc = "allow"
missing_panics_doc = "deny"
