[package]
name = "component"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time"] }

[lints]
workspace = true
